# mirafetch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.nix  Cargo.toml  README.md  build.rs  flake.nix  mirafetch-fix-metadata-auto.diff  mirafetch.rb  mirafetch.spec  report.html  report.json
.github/workflows/: rust.yml
archive/: Cargo.toml
archive/src/: archive.rs
data/: data.json5  data.yaml  flags.json  flags.rkyv  flags.toml  icons.yaml
src/: ascii.py  colorizer.rs  config.rs  flags.py  lib.rs  linuxinfo.rs  main.rs  tests.rs  util.rs  wininfo.rs  yeet.py
src/info/: iosinfo.rs  linuxinfo.rs  macinfo.rs  mod.rs  wininfo.rs
