[package]
name="mirafetch"
version="0.1.0"
edition="2021"
description="A Rust reimplementation of Hyfetch wih a focus on speed"
license-file="LICENSE.md"
repository="https://github.com/ArgentumCation/mirafetch"

include=["/data", "/src", "build.rs"]


# [dev-dependencies]
# cargo-semver-checks="0.22.0"


[dependencies]
libc={default-features=false, version="0.2.147"}
rayon="1.7.0"
regex={features=[
    "std",
    "unicode-perl",
], default-features=false, version="1.8.4"}
serde={version="1.0.164", default-features=false}
time={default-features=false, version="0.3.22"}
crossterm={default-features=false, version="0.26.1"}
anyhow="1.0.71"
toml={features=["parse"], default-features=false, version="0.7.6"}
glob="0.3.1"
itertools="0.11.0"
rustc-hash="1.1.0"
lazy_format="2.0.0"
directories="5.0.1"
lazy_static="1.4.0"
exitcode="1.1.2"
num={default-features=false, version="0.4.1"}
arcstr={default-features=false, version="1.1.5"}
serde_yaml="0.9.27"
serde_with="3.4.0"

[target.'cfg(windows)'.dependencies]
winreg="0.50.0"
wmi={default-features=false, version="0.13.1"}
windows={version="*", features=[
    "Win32_System_SystemInformation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
], default-features=false}
winsafe={version="0.0.17", features=["dwm"], default-features=false}

[target.'cfg(target_os = "macos")'.dependencies]
sysctl="0.5.4"
plist="1.5.0"
whoami="1.4.1"
platform-info="2.0.1"
battery="0.7.8"

[target.'cfg(target_os = "linux")'.dependencies]
platform-info="2.0.1"
pci-ids="0.2.5"

[profile.release]
lto=true
panic="abort"

[[bin]]
name="mirafetch"
path="src/main.rs"

[lib]
name="mirafetch"
path="src/lib.rs"
