[package]
name="mirafetch"
version="0.1.0"
edition="2021"
description="A Rust reimplementation of Hyfetch wih a focus on speed"
license-file="LICENSE.md"
license="EUPL-1.2" # Required for rust2rpm
readme="README.md"
repository="https://github.com/ArgentumCation/mirafetch"
homepage="https://github.com/ArgentumCation/mirafetch"
keywords=["fetch",  "cli", "sysinfo", "hyfetch"]
exclude = ["src/hyfetch/*"]
# include=["/data", "/src", "build.rs"]


# [dev-dependencies]
# cargo-semver-checks="0.22.0"


[dependencies]
libc={default-features=false, version="0.2"}
rayon="1.10"
regex={features=[
    "std",
    "perf",
    "unicode-perl",
], default-features=false, version="1.10"}
serde={version="1.0.164", default-features=false, features=["derive"]}
time={default-features=false, version="0.3"}
crossterm={default-features=false, features=["events"],version="0.28"}
anyhow="1.0.71"
toml={features=["parse"], default-features=false, version="0.8"}
glob="0.3.1"
itertools="0.13.0"
rustc-hash="2.0.0"
lazy_format="2.0"
directories="5.0"
lazy_static="1.5"
exitcode="1.1"
num={default-features=false, version="0.4"}
arcstr={default-features=false, version="1.2"}
serde_yaml="0.9"
serde_with="3.9"
clap = { version = "4.5", features = ["derive"] }
smallvec = "1.13.2"
platform-info="2.0"

[target.'cfg(windows)'.dependencies]
crossterm={default-features=false, features=["events","windows"],version="0.28"}
winreg="0.52"
wmi={default-features=false, version="0.14"}
windows={version="0.59.0", features=[
    "std",
    "Win32_System_SystemInformation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
], default-features=false}
winsafe={version="0.0", features=["advapi","dwm","kernel"], default-features=false}

[target.'cfg(target_os = "macos")'.dependencies]
sysctl="0.6.0"
plist="1.7.0"


[target.'cfg(target_os = "linux")'.dependencies]
pci-ids="0.2"

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "link-arg=-fuse-ld=mold"]
#
# [target.arm-unknown-linux-gnueabihf]
# linker = "arm-linux-gnueabihf-gcc"
# rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[profile.release]
lto=true
panic="abort"
debug=1

[[bin]]
name="mirafetch"
path="src/main.rs"

# [lib]
# name="mirafetch"
# path="src/lib.rs"
