[package]
name = "archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7.42", features = ["validation"] }
anyhow = "1.0.75"
bytecheck = "0.7.0"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
toml = "0.8.2"

[lib]
name = "archive"
path = "src/archive.rs"

[build-dependencies]
